--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 logs
 *.log
@@ -23,11 +22,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-=======
-# https://git-scm.com/docs/gitignore
-# https://help.github.com/articles/ignoring-files
-# Example.gitignore files : https://github.com/github/gitignore
-_notes/
-/bower_components/
-/node_modules/
->>>>>>> 6c647a3 (Updated since Dreamweaver setup)
+
+public_html/api/bedrock.php
+public_html/src/send_emails.py
