--- a/BofA-Compliant-Finance-RAG-Demo/requirements.txt
+++ b/BofA-Compliant-Finance-RAG-Demo/requirements.txt
@@ -1,36 +1,36 @@
 # Core LangChain dependencies
-langchain==0.1.0
-langchain-community==0.0.13
-langchain-aws==0.1.0
-langchain-huggingface==0.0.1
+langchain>=0.1.0
+langchain-community>=0.0.13
+langchain-aws>=0.1.0
+langchain-huggingface>=0.0.1
 
 # Vector Database
-chromadb==0.4.22
+chromadb>=0.4.0
 
 # Embeddings
-sentence-transformers==2.3.1
+sentence-transformers>=2.3.0
 
 # AWS Bedrock
-boto3==1.34.34
-botocore==1.34.34
+boto3>=1.34.0
+botocore>=1.34.0
 
 # Guardrails
-llm-guard==0.3.12
+llm-guard>=0.3.0
 
 # Observability
-langfuse==2.17.0
+langfuse>=2.17.0
 
 # Evaluation
-deepeval==0.21.45
+deepeval>=0.21.0
 
 # Utilities
-python-dotenv==1.0.0
-numpy==1.24.3
-pydantic==2.5.3
+python-dotenv>=1.0.0
+numpy>=1.24.0,<2.0.0
+pydantic>=2.5.0
 
 # Optional: OpenAI for DeepEval (if not using Bedrock for evaluation)
-openai==1.10.0
+openai>=1.10.0
 
 # Web API (optional)
-fastapi==0.109.0
-uvicorn==0.27.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
